<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_story.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <ImageView
            android:id="@+id/iv_story_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher_round"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:background="@drawable/bg_rounded_full"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_gallery"
            app:layout_constraintTop_toBottomOf="@id/iv_story_image" />

        <Button
            android:id="@+id/button_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:background="@drawable/bg_rounded_full"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toEndOf="@id/button_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_story_image" />

        <TextView
            android:id="@+id/tv_description_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_for_story"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_camera"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:ems="10"
            android:inputType="textLongMessage"
            android:background="@drawable/bg_description_box"
            android:padding="16dp"
            android:hint="@string/story_description_input"
            android:gravity="top|start"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description_story" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/add_current_location"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/sw_add_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/sw_add_location" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/sw_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ed_add_description"
            android:textOn="@string/on"
            android:textOff="@string/off"/>

        <Button
            android:id="@+id/button_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rounded_full"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sw_add_location" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>