<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.StartedFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="32dp">

        <ImageView
            android:id="@+id/iv_started"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@mipmap/ic_launcher_round"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_started_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_story_app"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_started" />

        <TextView
            android:id="@+id/tv_started_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/started_description"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_started_title" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/login"
            android:background="@drawable/bg_rounded_full"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_register"
            app:layout_constraintTop_toBottomOf="@id/tv_started_description" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:background="@drawable/bg_rounded_full"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_login"
            app:layout_constraintTop_toBottomOf="@id/tv_started_description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_gustu_ryan_2024"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>