<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.add_story.AddStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:src="@mipmap/ic_launcher_round"
            android:adjustViewBounds="false"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/story_owner"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_date"
            app:layout_constraintTop_toBottomOf="@id/iv_item_photo" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:layout_marginVertical="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/tv_item_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_item_photo"
            app:layout_constraintBottom_toTopOf="@id/tv_description_story"/>

        <TextView
            android:id="@+id/tv_description_story"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/story_description"
            android:textSize="18sp"
            android:maxLines="2"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>