<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail_story.DetailStoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_detail_photo"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@mipmap/ic_launcher_round"
                android:adjustViewBounds="false"
                android:scaleType="centerCrop"
                android:background="@drawable/bg_card_round"
                android:clipToOutline="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_detail_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/story_owner"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_date"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_photo" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="20sp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_detail_description"
                app:layout_constraintTop_toBottomOf="@id/iv_detail_photo" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="100dp"
                android:text="@string/story_description"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>