<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="36dp"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_login"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:src="@mipmap/ic_launcher_round"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:layout_marginTop="36dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hi_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/ed_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <TextView
        android:id="@+id/tv_login_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/ready_description"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ed_login_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_hi_header" />

    <com.example.storyapp.ui.custom_view.EmailEditText
        android:id="@+id/ed_login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_text"
        android:padding="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_header" />

    <com.example.storyapp.ui.custom_view.PasswordEditText
        android:id="@+id/ed_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_input_text"
        android:padding="16dp"
        android:drawableTint="#AEAAAB"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

    <com.example.storyapp.ui.custom_view.MyButton
        android:id="@+id/myButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:enabled="false"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_login_password" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_not_have_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_have_account"
            android:textAlignment="textEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_register"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/purple_700"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_not_have_account"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>