<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_add_24"
        android:backgroundTint="?attr/colorSecondary"
        android:tint="@color/white"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:elevation="24dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp" >

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/story_list"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_home_description"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/home_description"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_title" />

            <ImageButton
                android:id="@+id/button_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout_24"
                android:background="@drawable/bg_rounded_full"
                android:padding="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="?attr/colorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_home_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_home_description" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="12dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_story_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:paddingVertical="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_home_description"
                tools:listitem="@layout/fragment_card_story" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>